--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,8 @@
 <div id="smile-button">😊 hihi!</div>
 
 <body>
-  <audio id="background-audio" autoplay preload="auto" src="../assets/songs/Vanessa da Mata - Ainda Bem (Áudio Oficial).mp3"></audio>
+  <audio id="background-audio" autoplay preload="auto"
+    src="../assets/songs/Vanessa da Mata - Ainda Bem (Áudio Oficial).mp3"></audio>
   <header>
     <div class="container">
       <h1 id="girlfriend-name">Para minha doce Ramy🧁</h1>
@@ -140,7 +141,7 @@
         <div class="slide">
           <img src="../assets/drive-download-20250710T163252Z-1-001/IMG_20250620_141753.jpg" alt="Foto 4" />
         </div>
-         <div class="slide">
+        <div class="slide">
           <img src="../assets/drive-download-20250710T163252Z-1-001/IMG_20250620_142151.jpg" alt="Foto 4" />
         </div>
         <div class="slide">
@@ -155,7 +156,7 @@
         <div class="slide">
           <img src="../assets/drive-download-20250710T163252Z-1-001/IMG_20250620_164804.jpg" alt="Foto 4" />
         </div>
-         <div class="slide">
+        <div class="slide">
           <img src="../assets/drive-download-20250710T163252Z-1-001/IMG_20250620_164812.jpg" alt="Foto 4" />
         </div>
       </div>
@@ -166,7 +167,9 @@
   <footer>
     <div class="container">
       <p class="footer-message">
-       Se você chegou até aqui, saiba que é alguém muito especial, incrível e que eu quero levar comigo para o resto da minha vida... Continue sendo essa pessoa maravilhosa, sorridente, gentil e um tiquinho preconceituosa (brincadeirinha kkkkk). Enfim(kkkkkkkk), continue navegando... ainda tem mais por vir!
+        Se você chegou até aqui, saiba que é alguém muito especial, incrível e que eu quero levar comigo para o resto da
+        minha vida... Continue sendo essa pessoa maravilhosa, sorridente, gentil e um tiquinho preconceituosa
+        (brincadeirinha kkkkk). Enfim(kkkkkkkk), continue navegando... ainda tem mais por vir! <strong>Meus parabéns, Ramy🧁!!!</strong>
       </p>
       <button class="surprise-btn" onclick="window.location.href='jogo.html'">
         O que isso aqui faz?
